CSS spacing fix

--- a/sgem-stock-profit-calculator/assets/css/spc-cal-calculator.css
+++ b/sgem-stock-profit-calculator/assets/css/spc-cal-calculator.css
@@ -335,7 +335,7 @@
     font-weight: 300;
 }
 .sgem-spc-buttonGet{
-    margin-top: 40px;
+    margin-top: 39px;
     display: flex;
 }
 .sgem-spc-cal-1-result-footer .sgem-spc-getStart {
@@ -775,7 +775,7 @@
 
 /* disclaimer styles */
 .sgem-spc-section-disclaimer {
-    margin-top: 40px;
+    margin-top: 31px;
 }
 .sgem-spc-details-disclaimer summary {
     display: flex !important;
